--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>catppuccin/renovate-config:default"
-  ]
+  "extends": ["github>catppuccin/renovate-config:default"],
+  "git-submodules": {
+    "enabled": true
+  }
 }
