package: add tsconfig & set type: module

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "catppuccin-vscord",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsx scripts/build.ts",
     "lint": "eslint ."
