refactor: use consola and top-level await

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+    "target": "es2017",
 
 		// Treat files as modules even if it doesn't use import/export
 		"moduleDetection": "force",
