--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify/json": "^2.2.226",
     "@iconify/utils": "^2.1.25",
     "@types/node": "^20.14.10",
+    "consola": "^3.2.3",
     "eslint": "^9.6.0",
     "globals": "^15.8.0",
     "sharp": "^0.33.4",
